# kmymoney

./: .gitlab-ci.yml  CMakeLists.txt  config-kmymoney.h.cmake  kmm-flowtable-export-to-sankey-csv  kmymoney.doxygen.in  kmymoney_to_finanzfluss.py  kmymoney_to_sankey.py  sankey-2017-finances-to-date.py  sankey-example.csv  sankey-example.py  snapcraft.yaml  test.csv
doc/: CMakeLists.txt  credits.docbook  details-aqbanking.docbook  index.docbook  (+4 more)
kmymoney/plugins/business/: CMakeLists.txt  businessdlg.cpp  businessdlg.h  businessdlg.ui  businessplugin.cpp  businessplugin.h  kmm_business.desktop
kmymoney/plugins/views/reports/core/: CMakeLists.txt  alkdom.cpp  alkdom.h  flowtable.cpp  flowtable.h  kreportchartview.cpp  kreportdateaxis.cpp  kreportdateaxis.h  listtable.cpp  listtable.h  objectinfotable.cpp  objectinfotable.h  pivotgrid.cpp  pivotgrid.h  pivottable.cpp  pivottable.h  querytable.cpp  querytable.h  reporttable.cpp  reporttable.h
kmymoney/plugins/views/reports/core/tests/: CMakeLists.txt  pivotgrid-test.cpp  pivotgrid-test.h  pivottable-test.cpp  pivottable-test.h  querytable-test.cpp  sankeytestmodel.cpp  sankeytestmodel.h  test-pivottable.cpp  test-pivottable.h  test-querytable.cpp  test-sankeydiagram.cpp
kmymoney/plugins/views/reports/core/tests/data/: CMakeLists.txt  compare.cmake  refinance-loan-report-querytable-refinance-loan.csv  test-345550-report-querytable-Transactions-by-Account-_with-conversion_.csv  test-345550-report-querytable-Transactions-by-Account-_without-conversion_.csv  test-345550.xml  test-382245-report-querytable-Buchungen-nach-Kategorie-_mit-Umrechnung_.csv  test-382245-report-querytable-Buchungen-nach-Kategorie-_ohne-Umrechnung_.csv  test-423870-report-querytable-Transactions-by-Category-_Base-unconverted_.csv  test-423870-report-querytable-Transactions-by-Payee-_Base-unconverted_.csv  test-423870-report-querytable-Transactions-by-account-_Base-unconverted_.csv  test-424674-report-querytable-Transactions-by-account-_Customised_.csv  test-424674-report-querytable-Transactions-by-category-_Customised_.csv  test-448788-report-querytable-Buchungen-nach-Kategorie-_ohne-Umrechnung_.csv  test-balance-forecast-report.xml  test-budget.xml  test-cash-flow-report-querytable-Cash-Flow-Transactions-This-Month-_Customized_.csv  test-credit-card.xml  test-general-information-report-infotable-Loan-Information-_customized_.csv  test-investment-multi-currency-report-querytable-Investment-Capital-Gains-by-Account-_Customized---no-conversion_.csv  test-investment-multi-currency-report-querytable-Investment-Capital-Gains-by-Account-_Customized_.csv  test-investment-multi-currency-report-querytable-Investment-Transactions-_Customized---no-conversion_.csv  test-investment-multi-currency-report-querytable-Investment-Transactions-_Customized_.csv  test-investment-multi-currency.xml  test-investment-report-querytable-Investment-Capital-Gains-by-Account-_Customized_.csv  test-investment-report-querytable-Investment-Holdings-by-Account-_Customized_.csv  test-investment-report-querytable-Investment-Transactions-_Customized_.csv  test-net-worth-report-querytable-Account-Balances-by-Type-_Customized_.csv  test-sankey-extended.xml  test-transactions-currency.xml  test-transactions-multi-currency.xml  test-transactions-report-querytable-Transactions-by-Account-_Customized_.csv  test-transactions-report-querytable-Transactions-by-Category-_Customized_.csv  test-transactions-report-querytable-Transactions-by-Month-_Customized_.csv  test-transactions-report-querytable-Transactions-by-Payee-_Customized_.csv  test-transactions-report-querytable-Transactions-by-Reconciliation-Status-_Customized_.csv  test-transactions-report-querytable-Transactions-by-Tag-_Customized_.csv  test-transactions-report-querytable-Transactions-by-Week-_Customized_.csv
kmymoney/plugins/views/reports/core/tests/data/csv/: test-516585-convert-currency-report-querytable-Transactions-by-Account-_Base-converted_.csv  test-516585-convert-currency-report-querytable-Transactions-by-Account-_Base-unconverted_.csv  test-investment-multi-currency-report-querytable-Investment-Capital-Gains-by-Account-_without-currency-conversion_.csv  test-investment-multi-currency-report-querytable-Investment-Holdings-by-Account-_with-currency-conversion_.csv  test-investment-multi-currency-report-querytable-Investment-Holdings-by-Account-_without-currency-conversion_.csv  test-investment-multi-currency-report-querytable-Investment-Transactions-_with-currency-conversion_.csv  test-investment-multi-currency-report-querytable-Investment-Transactions-_without-currency-conversion_.csv  test-investment-multi-currency-report-querytable-Transactions-by-Account-_with-currency-conversion_.csv  (+10 more)
kmymoney/plugins/xml/tests/: CMakeLists.txt  mymoneyxmlcontenthandler-test.cpp  test-filelocking.cpp  testfilelocking.cpp  xmlstorage-test.cpp  xmlstorage-test.h
kmymoney/python/: CMakeLists.txt  README.md  kmymoney_python.i  test_transaction.py.cmake  transactionbuilder.cpp  transactionbuilder.h
(+720 files in other folders)
